--- a/homedialog.ui
+++ b/homedialog.ui
@@ -6,34 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1335</width>
-    <height>814</height>
+    <width>896</width>
+    <height>550</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_3">
-   <property name="spacing">
-    <number>0</number>
-   </property>
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
-     <property name="spacing">
-      <number>0</number>
-     </property>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
        <property name="spacing">
@@ -44,7 +26,13 @@
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>40</height>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>32</height>
           </size>
          </property>
          <property name="styleSheet">
@@ -60,7 +48,7 @@ color: rgb(255, 0, 0);</string>
         <widget class="QWidget" name="widget" native="true">
          <property name="minimumSize">
           <size>
-           <width>0</width>
+           <width>40</width>
            <height>40</height>
           </size>
          </property>
@@ -70,21 +58,18 @@ color: rgb(255, 0, 0);</string>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <property name="spacing">
-        <number>0</number>
-       </property>
        <item>
         <widget class="QWidget" name="mainwidget" native="true">
          <property name="minimumSize">
           <size>
-           <width>1024</width>
-           <height>768</height>
+           <width>640</width>
+           <height>480</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>1024</width>
-           <height>768</height>
+           <width>640</width>
+           <height>480</height>
           </size>
          </property>
          <property name="styleSheet">
@@ -93,7 +78,7 @@ color: rgb(255, 0, 0);</string>
         </widget>
        </item>
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout" stretch="1,3,2,1">
+        <layout class="QVBoxLayout" name="verticalLayout" stretch="2,8,3,3">
          <item>
           <widget class="QGroupBox" name="groupBox_resource">
            <property name="title">
@@ -102,25 +87,25 @@ color: rgb(255, 0, 0);</string>
            <widget class="QLabel" name="label">
             <property name="geometry">
              <rect>
-              <x>40</x>
-              <y>40</y>
+              <x>20</x>
+              <y>10</y>
               <width>151</width>
               <height>51</height>
              </rect>
             </property>
             <property name="styleSheet">
-             <string notr="true">font: 24pt &quot;楷体&quot;;</string>
+             <string notr="true">font: 20pt &quot;楷体&quot;;</string>
             </property>
             <property name="text">
              <string>剩余资源：</string>
             </property>
            </widget>
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="label_resource">
             <property name="geometry">
              <rect>
-              <x>200</x>
-              <y>40</y>
-              <width>101</width>
+              <x>150</x>
+              <y>10</y>
+              <width>71</width>
               <height>51</height>
              </rect>
             </property>
@@ -138,13 +123,13 @@ color: rgb(255, 0, 0);</string>
            <property name="title">
             <string>防御塔</string>
            </property>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="pushButton_1">
             <property name="geometry">
              <rect>
               <x>10</x>
               <y>20</y>
-              <width>90</width>
-              <height>90</height>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -157,10 +142,10 @@ color: rgb(255, 0, 0);</string>
            <widget class="QPushButton" name="pushButton_2">
             <property name="geometry">
              <rect>
-              <x>110</x>
+              <x>80</x>
               <y>20</y>
-              <width>90</width>
-              <height>90</height>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -173,10 +158,10 @@ color: rgb(255, 0, 0);</string>
            <widget class="QPushButton" name="pushButton_3">
             <property name="geometry">
              <rect>
-              <x>210</x>
+              <x>150</x>
               <y>20</y>
-              <width>90</width>
-              <height>90</height>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -186,13 +171,13 @@ color: rgb(255, 0, 0);</string>
              <string/>
             </property>
            </widget>
-           <widget class="QPushButton" name="pushButton_4">
+           <widget class="QPushButton" name="pushButton_5">
             <property name="geometry">
              <rect>
-              <x>110</x>
-              <y>120</y>
-              <width>90</width>
-              <height>90</height>
+              <x>80</x>
+              <y>90</y>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -202,13 +187,13 @@ color: rgb(255, 0, 0);</string>
              <string/>
             </property>
            </widget>
-           <widget class="QPushButton" name="pushButton_5">
+           <widget class="QPushButton" name="pushButton_6">
             <property name="geometry">
              <rect>
-              <x>210</x>
-              <y>120</y>
-              <width>90</width>
-              <height>90</height>
+              <x>150</x>
+              <y>90</y>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -218,13 +203,13 @@ color: rgb(255, 0, 0);</string>
              <string/>
             </property>
            </widget>
-           <widget class="QPushButton" name="pushButton_6">
+           <widget class="QPushButton" name="pushButton_4">
             <property name="geometry">
              <rect>
               <x>10</x>
-              <y>120</y>
-              <width>90</width>
-              <height>90</height>
+              <y>90</y>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -234,13 +219,13 @@ color: rgb(255, 0, 0);</string>
              <string/>
             </property>
            </widget>
-           <widget class="QPushButton" name="pushButton_7">
+           <widget class="QPushButton" name="pushButton_8">
             <property name="geometry">
              <rect>
-              <x>110</x>
-              <y>220</y>
-              <width>90</width>
-              <height>90</height>
+              <x>80</x>
+              <y>160</y>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -250,13 +235,13 @@ color: rgb(255, 0, 0);</string>
              <string/>
             </property>
            </widget>
-           <widget class="QPushButton" name="pushButton_8">
+           <widget class="QPushButton" name="pushButton_9">
             <property name="geometry">
              <rect>
-              <x>210</x>
-              <y>220</y>
-              <width>90</width>
-              <height>90</height>
+              <x>150</x>
+              <y>160</y>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -266,13 +251,13 @@ color: rgb(255, 0, 0);</string>
              <string/>
             </property>
            </widget>
-           <widget class="QPushButton" name="pushButton_9">
+           <widget class="QPushButton" name="pushButton_7">
             <property name="geometry">
              <rect>
               <x>10</x>
-              <y>220</y>
-              <width>90</width>
-              <height>90</height>
+              <y>160</y>
+              <width>60</width>
+              <height>60</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -289,13 +274,13 @@ color: rgb(255, 0, 0);</string>
            <property name="title">
             <string>防御塔介绍</string>
            </property>
-           <widget class="QLabel" name="label_3">
+           <widget class="QLabel" name="label_introduce">
             <property name="geometry">
              <rect>
-              <x>30</x>
-              <y>40</y>
-              <width>251</width>
-              <height>131</height>
+              <x>10</x>
+              <y>20</y>
+              <width>201</width>
+              <height>51</height>
              </rect>
             </property>
             <property name="styleSheet">
@@ -303,6 +288,9 @@ color: rgb(255, 0, 0);</string>
             </property>
             <property name="text">
              <string>防御塔：。。。。。。</string>
+            </property>
+            <property name="wordWrap">
+             <bool>true</bool>
             </property>
            </widget>
           </widget>
@@ -312,20 +300,36 @@ color: rgb(255, 0, 0);</string>
            <property name="title">
             <string>终极技能</string>
            </property>
-           <widget class="QPushButton" name="pushButton_10">
+           <widget class="QPushButton" name="pushButton_skill">
             <property name="geometry">
              <rect>
               <x>40</x>
-              <y>30</y>
+              <y>20</y>
               <width>68</width>
               <height>68</height>
              </rect>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-image: url(:/image/41.png);</string>
+             <string notr="true">background-image: url(:/image/skill0.png);</string>
             </property>
             <property name="text">
              <string/>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_skill">
+            <property name="geometry">
+             <rect>
+              <x>130</x>
+              <y>40</y>
+              <width>61</width>
+              <height>31</height>
+             </rect>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">font: 20pt &quot;楷体&quot;;</string>
+            </property>
+            <property name="text">
+             <string>50%</string>
             </property>
            </widget>
           </widget>
