--- a/screeningdialog.ui
+++ b/screeningdialog.ui
@@ -1,17 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ScreeningDialog</class>
- <widget name="ScreeningDialog" class="QDialog">
+ <widget class="QDialog" name="ScreeningDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>500</width>
+    <height>233</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>20</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 24pt &quot;楷体&quot;;
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>选择关卡</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
